--- a/pom.xml
+++ b/pom.xml
@@ -72,12 +72,12 @@
 	  <version>2.5.2</version>
 	  <scope>provided</scope>
 	 </dependency>
-	 <dependency>
-	  <groupId>org.apache.tomcat.embed</groupId>
-	  <artifactId>tomcat-embed-core</artifactId>
-	  <version>8.5.23</version>
-	  <type>jar</type>
-	 </dependency>
+		 
+		 <dependency>
+ 		 <groupId>org.apache.tomcat.embed</groupId>
+		  <artifactId>tomcat-embed-core</artifactId>
+		  <version>[8.5.40,)</version>
+         </dependency>
 	 <dependency>
 	  <groupId>javax.servlet</groupId>
 	  <artifactId>javax.servlet-api</artifactId>
